<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kaizen Ceit</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Heslo</string>
    <string name="name">Meno</string>
    <string name="surname">Priezvisko</string>
    <string name="btn_login">Prihlásiť</string>
    <string name="btn_register">Registrovať</string>
    <string name="btn_link_to_register">Prejdi na registráciu</string>
    <string name="btn_link_to_login">Prejdi na prihlásenie</string>
    <string name="welcome">Vytajte</string>
    <string name="btn_logout">Odhlásiť</string>
    <string name="my_ideas">Moje nápady</string>
    <string name="name1">Meno</string>
    <string name="name2">Priezvisko</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="company">Oddelenie</string>
    <string name="phone">Telefón</string>
    <string name="age">Vek</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="title_activity_list_of_events">ListOfEvents</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="zoznamB">Zoznam úloh</string>
    <string name="addTaskB">Pridať úlohu</string>
    <string name="taskName">Názov návrhu</string>
    <string name="taskCathegory">Kategória</string>
    <string name="taskDate">Aktuálny stav</string>
    <string name="taskPriority">Navrhovaný stav</string>
    <string name="taskDescription">Popis </string>
    <string name="taskAddButton">Send</string>
    <string name="taskAddButton2">Send email</string>
    <string name="taskNameFragment"> Názov:</string>
    <string name="priezvisko">Autor:</string>
    <string name="taskCathegoryFragment"> Aktuálny stav:</string>
    <string name="taskDateFragment"> Navrhovaný stav:</string>
    <string name="taskTimeFragment">Čas:</string>
    <string name="taskPriorityFragment">Priorita:</string>
    <string name="taskDescriptionFragment"> Náklady:</string>
    <string name="taskDeleteButton">Delete User</string>
    <string name="title_activity_new_idea">NewIdea</string>
    <string name="title_activity_idea_detail">IdeaDetail</string>
    <string name="title_activity_list_of_ideas">ListOfIdeas</string>
    <string name="photo">Take a photo now</string>
    <string name="browse_photo">Browse an image in the device</string>
    <string name="costs">Costs</string>
    <string name="add_item">Add item</string>
    <string name="view_items">View items</string>
    <string name="view_users">View users</string>
    <string name="title_activity_userr">Userr</string>
    <string name="title_activity_user">User</string>
    <string name="os">Old state</string>
    <string name="is">Improved state</string>
    <string name="title_activity_facina">Facina</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="before2">Take Photo of actual state</string>
    <string name="after2">Take photo of improved state</string>
    <string name="title_activity_user_detail">UserDetail</string>
    <string name="title_activity_list_of_users">ListOfUsers</string>
    <string name="dateRegister">Registration:</string>
    <string name="title_activity_mail">MailActivity</string>

    <string name="toast_button_1_1">Vyberte kategóriu do ktorej patrí zlepšenie</string>
    <string name="toast_button_1_2">Zadajte názov zlepšenia</string>
    <string name="toast_button_1_3">Charakterizujte problém, ktorý bude zlepšenie riešiť</string>
    <string name="toast_button_1_4">Miesto, príp. oddelenie, kde sa daný problém nachádza?</string>
    <string name="toast_button_1_5">Charakterizujte príčinu vzniku problému</string>
    <string name="toast_button_1_6">Vyberte prílohu charakterizujúcu problém</string>

    <string name="toast_button_2_1">Vyberte typ zlepšenia </string>
    <string name="toast_button_2_2">Popíšte samotný zlepšovák</string>
    <string name="toast_button_2_3">Aké budú prínosy zlepšenia?</string>
    <string name="toast_button_2_4">Aké sú predpokladané náklady?</string>
    <string name="toast_button_2_6">Zvolte prioritu riešenia?</string>
    <string name="toast_button_2_5">Vyberte prílohu charakterizujúcu riešenie</string>
</resources>