<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8FFF79">

        <TextView
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="100px"
            android:textColor="@color/nadpisy"
            android:text="@string/taskNameFragment"/>

        <TextView
            android:id="@+id/nazovUlohy"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:textColor="@color/nadpisy"
            android:layout_height="200px" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:textColor="@color/nadpisy"
            android:layout_height="200px"
            android:text="@string/taskCathegoryFragment"/>

        <TextView
            android:id="@+id/kategoriaUlohy"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/nadpisy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8FFF79">

        <TextView
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:textColor="@color/nadpisy"
            android:text="@string/taskDateFragment"/>

        <TextView
            android:id="@+id/datumUlohy"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:textColor="@color/nadpisy"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:textColor="@color/nadpisy"
            android:text="@string/taskPriority"/>

        <TextView
            android:id="@+id/prioritaUlohy"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="fill_parent"
            android:textColor="@color/nadpisy"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#8FFF79">

        <TextView
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="fill_parent"
            android:layout_height="200px"
            android:textColor="@color/nadpisy"
            android:text="@string/taskDescriptionFragment"/>

        <TextView
            android:id="@+id/popisUlohy"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="fill_parent"
            android:textColor="@color/nadpisy"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:textColor="@color/nadpisy"
        android:text="@string/before"/>



    <ImageView
        android:layout_width="800px"
        android:layout_height="450px"
        android:layout_gravity="center"
        android:id="@+id/img"/>

    <TextView
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="100px"
        android:textColor="@color/nadpisy"
        android:text="@string/after"/>


    <ImageView
        android:layout_width="800px"
        android:layout_height="450px"
        android:layout_gravity="center"
        android:id="@+id/img2"/>
    <!--
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/vymazat"
        android:text="@string/taskDeleteButton" /> -->
</LinearLayout>
</ScrollView>