<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        tools:context=".MainActivity"
        android:weightSum="1"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/taskName"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:background="@drawable/custom_edittext"
            android:layout_marginBottom="20dp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/taskDate"
            android:id="@+id/textView3" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:background="@drawable/custom_edittext"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/pathButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/before2"
            android:textColor="@color/nadpisy" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dip"
            android:id="@+id/imageView2"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/taskPriority"
            android:id="@+id/textView4" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:background="@drawable/custom_edittext"
            android:layout_weight="0.30" />
        <Button
            android:id="@+id/pathButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/after2"
            android:textColor="@color/nadpisy" />


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dip"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/taskDescription"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:id="@+id/textView5" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:background="@drawable/custom_edittext"
            android:layout_weight="0.3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/costs"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:id="@+id/costs" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:id="@+id/editText2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Receiver"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:id="@+id/receiver" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:id="@+id/editText5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Priority"
            android:textColor="@color/nadpisy"
            android:textStyle="bold"
            android:id="@+id/textView2" />

        <RadioGroup
            android:id="@+id/radioPriorita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40px"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Urgent"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="High"
                android:id="@+id/radioButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:id="@+id/radioButton6" />
        </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="Null"
        android:id="@+id/messageText"
        android:layout_gravity="center_horizontal" />



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Null"
        android:id="@+id/messageText2"
        android:layout_gravity="center_horizontal" />


            <!-- Login Button -->




            <!-- Link to Login Screen -->




        <!-- Login Button -->





        <!-- Link to Login Screen -->



    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/taskAddButton"


        android:background="@color/btn_login_bg"

        android:textColor="@color/nadpisy"

        />
</LinearLayout>
</ScrollView>