<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:background="#2e3237">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg_login">

            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:layout_height="100px"
                android:textColor="@color/text_color"
                android:text="@string/taskNameFragment"/>

            <TextView
                android:id="@+id/nazovUlohy"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:textColor="@color/text_color"
                android:layout_height="200px" />

        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:textColor="@color/text_color"
                android:layout_height="200px"
                android:text="@string/taskCathegoryFragment"/>

            <TextView
                android:id="@+id/kategoriaUlohy"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg_login">

            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:layout_height="200px"
                android:textColor="@color/text_color"
                android:text="@string/taskDateFragment"/>

            <TextView
                android:id="@+id/datumUlohy"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="fill_parent"
                android:layout_height="200px"
                android:textColor="@color/text_color"
                android:text="@string/taskPriority"/>

            <TextView
                android:id="@+id/prioritaUlohy"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:textColor="@color/text_color"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/vymazat"
            android:text="@string/taskDeleteButton" />
    </LinearLayout>
</ScrollView>