<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadie3"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Login Button -->

        <ImageButton
            android:layout_weight="2"
            android:id="@+id/view_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:text="@string/view_users"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:textColor="@color/nadpisy"
            android:src="@drawable/users_neaktiv2"/>

        <ImageButton
            android:layout_weight="2"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:textColor="@color/nadpisy"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:text="@string/btn_logout"
            android:src="@drawable/login_neaktiv2"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <!-- Login Button -->
        <ImageView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:scaleType="fitXY"
            android:src="@drawable/transparent"
            android:adjustViewBounds="true"
            android:cropToPadding="false" />

        <ImageView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/obrazok_kaizen2"
            android:adjustViewBounds="true"
            android:cropToPadding="false" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:orientation="horizontal" >

        <ImageButton
            android:layout_weight="2"
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:background="#80000000"
            android:textColor="@color/nadpisy"
            android:scaleType="fitXY"
            android:src="@drawable/pridat_neaktiv"
            android:adjustViewBounds="true" />

        <ImageButton
            android:layout_weight="2"
            android:id="@+id/view_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:text="@string/view_items"
            android:textColor="@color/nadpisy"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/hladat_neaktiv"/>


        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>